# xpm

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  declarations.hpp  functions.cpp  functions.h  main.cpp  mywidg.ui  pore_network.hpp  pore_network_image.hpp  pore_network_info.hpp  pore_network_model.hpp  threedvis.hpp  xpm_widget.hpp
config/: config.json
dpl/: CMakeLists.txt  colors.hpp  events.hpp  general.hpp  soa.hpp  static_map.hpp  static_vector.hpp  units.hpp
dpl/graph/: _OLD_general.hpp  aug_avltree_algorithms_ext.hpp  avl_defs.hpp  avl_extended_augmented_tree_algorithms.hpp  avl_extended_tree_algorithms.hpp  avltree_algorithms_ext.hpp  core.hpp  cyclic_operations.hpp  dc_context.hpp  dc_et_context.hpp  dc_et_properties.hpp  dc_graph.hpp  dc_properties.hpp  disjoint_set.h  dynamic_connectivity_graph.hpp  et_dc_context.hpp  et_etnte_defs.hpp  et_node.hpp  etnte_context.hpp  etnte_node.hpp  euler_tour_dynamic_connectivity_context.hpp  euler_tour_node.hpp  euler_tour_non_tree_edge.hpp  euler_tour_visitor.hpp  general.hpp  graph_storage.hpp  smart_pool.hpp  vertex_directed_edge.hpp
dpl/graph/bst/: aug_avltree_algorithms_ext.hpp  avl_defs.hpp  avltree_algorithms_ext.hpp  cyclic.hpp
dpl/hypre/: Input.hpp  InputDeprec.hpp  core.hpp  ij_matrix.hpp  ij_vector.hpp  mpi_module.hpp  sparse_matrix.hpp  sparse_matrix_builder.hpp
dpl/qt/: layout.hpp
dpl/qt/property_editor/: Editors.hpp  PropertyEntities.hpp  PropertyItemsBase.hpp  QPropertyTreeView.hpp  ScalarConvert.hpp
dpl/vtk/: ImageDataGlyphMapper.hpp  ReadOnlyArray.hpp  TidyAxes.hpp  Utils.hpp
files/: config.json  xpm.schema.json
files/images/: Est_3phase250cubed4micron.txt  Est_5phase250cubed4micron.txt  Est_Nano_Erode.txt
files/scripts/: .gitignore  eslint.config.mjs  package-lock.json  package.json
files/scripts/schema/: example1.json  main.mjs
files/tutorials/tutorial1/: config_tutorial1.json
files/tutorials/tutorial2/: config_tutorial2.json
files/tutorials/tutorial3/: config_tutorial3_micro.json  config_tutorial3_nano.json
files/tutorials/tutorial4/: config_tutorial4.json
files/tutorials/tutorial5/: config_tutorial5_micro.json  config_tutorial5_nano1.json  config_tutorial5_nano2.json  config_tutorial5_nano3.json
libs/dpl/: CMakeLists.txt  curve2d.hpp  defs_fmt.hpp  defs_json.hpp  events.hpp  fmt-formatter.hpp  general.hpp  json.hpp  mpi_defs.hpp  soa.hpp  static_map.hpp  static_vector.hpp  system.hpp  units.hpp
libs/dpl/graph/: _TO_DEL_et_etnte_defs.hpp  dc_context.hpp  dc_graph.hpp  dc_traits.hpp  et_etnte_defs.hpp
libs/dpl/graph/bst/: aug_avltree_algorithms_ext.hpp  avl_defs.hpp  avltree_algorithms_ext.hpp  cyclic.hpp
libs/dpl/hypre/: InputDeprec.hpp  core.hpp  ij_matrix.hpp  ij_vector.hpp  mpi_module.hpp
libs/dpl/include/dpl/: curve2d.hpp  defs_fmt.hpp  defs_mpi.hpp  general.hpp  soa.hpp  static_map.hpp
libs/dpl/include/dpl/graph/: dc_traits.hpp
libs/dpl/include/dpl/graph/bst/: avl_defs.hpp  avltree_algorithms_ext.hpp  cyclic.hpp
libs/dpl/include/dpl/hypre/: core.hpp  ij_matrix.hpp
libs/dpl/include/dpl/qt/property_editor/: Editors.hpp  PropertyEntities.hpp  PropertyItemsBase.hpp  QPropertyTreeView.hpp
libs/dpl/include/dpl/render/: text.hpp
libs/dpl/include/dpl/vtk/: ReadOnlyArray.hpp  TidyAxes.hpp
libs/dpl/qt/: layout.hpp  parse.hpp
libs/dpl/qt/property_editor/: PropertyEntities.hpp  PropertyItemsBase.hpp  QPropertyTreeView.hpp  ScalarConvert.hpp
libs/dpl/render/: general.hpp
libs/dpl/vtk/: ImageDataGlyphMapper.hpp  ReadOnlyArray.hpp  TidyAxes.hpp  Utils.hpp
libs/hypre/AUTOTEST/: README.txt
libs/pnextract/src/include/: globals.h
libs/pnextract/src/libvoxel/: voxelImage.cpp
pnextract/: CMakeLists.txt
pnextract/src/libvoxel/: voxelImage.cpp
pnextract/src/pnm/pnextract/: blockNet_vxlManip.cpp
src/: declarations.hpp  displ_queue.hpp  functions.cpp  functions.h  invasion_task.hpp  main.cpp  modeller.hpp  pore_network_image.hpp  widget.hpp  xpm_widget.hpp
